--- a/common.css
+++ b/common.css
@@ -16,9 +16,9 @@ body {
 }
 @font-face {
   font-family: "Roboto";
-  src: url("font/Roboto-Regular.ttf") format("truetype");
+  src: url("font/Roboto-ExtraLight.ttf") format("truetype");
   font-style: normal;
-  font-weight: 400;
+  font-weight: 200;
 }
 @font-face {
   font-family: "Roboto";
@@ -28,9 +28,21 @@ body {
 }
 @font-face {
   font-family: "Roboto";
-  src: url("font/Roboto-ExtraLight.ttf") format("truetype");
+  src: url("font/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
-  font-weight: 200;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("font/Roboto-Medium.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("font/Roboto-Bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 700;
 }
 header #line nav ul li a {
   color: white;
@@ -42,39 +54,79 @@ main {
   align-items: center;
   flex-direction: column;
 }
-main #welcome h1 {
-  color: white;
-  font-family: Forum, serif;
-}
-main #welcome h4 {
-  color: white;
-}
-main #welcome button {
-  background: rgb(113, 7, 7);
-  color: white;
-  transition: background-color 0.4s ease;
-}
-main #welcome button:hover {
-  background: rgb(157, 134, 101);
-  cursor: pointer;
-}
 main h2 {
   text-transform: uppercase;
   font-family: Forum, serif;
 }
-main #welcome, main #explore, main #gallery {
-  background: rgb(3, 3, 3);
+
+#welcome h1 {
+  color: white;
+  font-family: Forum, serif;
 }
-main #welcome h2, main #welcome p, main #explore h2, main #explore p, main #gallery h2, main #gallery p {
+#welcome h4 {
   color: white;
 }
-main #visiting, main #video, main #tickets, main #contacts {
+#welcome button {
+  background: rgb(113, 7, 7);
+  transition: background-color 0.4s ease;
+}
+#welcome button a {
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 100%;
+  letter-spacing: 2px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#welcome button:hover {
+  background: rgb(157, 134, 101);
+  cursor: pointer;
+}
+
+#video iframe {
+  width: 100%;
+  height: 100%;
+}
+#video .scroller img {
+  width: 100%;
+  height: 100%;
+}
+
+#gallery .container .column .item img {
+  width: 100%;
+  height: 100%;
+}
+
+#tickets input[type=number] {
+  -moz-appearance: textfield;
+}
+#tickets input[type=number]::-webkit-outer-spin-button,
+#tickets input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#welcome, #explore, #gallery, footer {
+  background: rgb(3, 3, 3);
+}
+#welcome h2, #welcome p, #explore h2, #explore p, #gallery h2, #gallery p, footer h2, footer p {
+  color: white;
+}
+
+#visiting, #video, #tickets, #contacts {
   background: white;
 }
-main #visiting h2, main #video h2, main #tickets h2, main #contacts h2 {
+#visiting h2, #video h2, #tickets h2, #contacts h2 {
   color: rgb(157, 134, 101);
 }
-main #visiting p, main #video p, main #tickets p, main #contacts p {
+#visiting p, #video p, #tickets p, #contacts p {
   color: black;
 }
 
