--- a/style.css
+++ b/style.css
@@ -14,26 +14,6 @@
     flex-direction: row;
     justify-content: space-between;
   }
-  header #line #logo {
-    width: 215px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  header #line #logo img.pyramid {
-    width: 49px;
-    height: 26px;
-  }
-  header #line #logo h3 {
-    color: white;
-    font-family: Forum, serif;
-    font-weight: 200;
-    font-size: 28px;
-    line-height: 100%;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-  }
   header #line nav {
     height: 100%;
     width: 775px;
@@ -67,7 +47,7 @@
     width: 100%;
     margin-top: 25px;
   }
-  main section div.content {
+  main section .content {
     width: 1440px;
     height: 100%;
   }
@@ -84,17 +64,17 @@
     font-size: 22px;
     line-height: 38.5px;
   }
-  main #welcome {
+  #welcome {
     height: 810px;
   }
-  main #welcome div.content {
+  #welcome div.content {
     position: relative;
   }
-  main #welcome div.content div.text-content {
+  #welcome div.content div.text-content {
     position: absolute;
     top: 150px;
   }
-  main #welcome div.content div.text-content h1 {
+  #welcome div.content div.text-content h1 {
     position: relative;
     font-weight: 400;
     font-size: 80px;
@@ -102,7 +82,7 @@
     letter-spacing: 5px;
     z-index: 2;
   }
-  main #welcome div.content div.text-content h4 {
+  #welcome div.content div.text-content h4 {
     width: 445px;
     height: 33px;
     position: absolute;
@@ -114,7 +94,7 @@
     letter-spacing: 2px;
     z-index: 2;
   }
-  main #welcome div.content div.text-content button {
+  #welcome div.content div.text-content button {
     width: 360px;
     height: 75px;
     position: absolute;
@@ -129,28 +109,28 @@
     text-align: center;
     vertical-align: middle;
   }
-  main #welcome div.content img {
+  #welcome div.content img {
     z-index: 1;
     width: 1000px;
     top: 0;
     right: 0;
     position: absolute;
   }
-  main #visiting {
+  #visiting {
     display: flex;
     justify-content: center;
     padding-bottom: 75px;
   }
-  main #visiting div.content {
+  #visiting div.content {
     height: 1116px;
     width: 1440px;
     margin-top: 75px;
   }
-  main #visiting div.content h2 {
+  #visiting div.content h2 {
     width: 100%;
     height: 90px;
   }
-  main #visiting div.content .panorama-container {
+  #visiting div.content .panorama-container {
     margin-top: 75px;
     display: grid;
     justify-content: space-between;
@@ -159,11 +139,11 @@
     grid-template-rows: repeat(2, 424px);
     row-gap: 75px;
   }
-  main #visiting div.content .panorama-container .panorama img {
+  #visiting div.content .panorama-container .panorama img {
     width: 440px;
     height: 285px;
   }
-  main #visiting div.content .panorama-container .panorama h3 {
+  #visiting div.content .panorama-container .panorama h3 {
     margin-top: 25px;
     font-family: Forum, serif;
     font-weight: 400;
@@ -172,50 +152,404 @@
     letter-spacing: 5px;
     text-transform: uppercase;
   }
-  main #visiting div.content .panorama-container .panorama div.bar {
+  #visiting div.content .panorama-container .panorama div.bar {
     margin-top: 10px;
     width: 300px;
   }
-  main #visiting div.content .panorama-container .panorama p {
+  #visiting div.content .panorama-container .panorama p {
     font-family: Roboto, sans-serif;
     line-height: 100%;
     font-weight: 200;
     color: rgb(0, 0, 0);
     margin-top: 10px;
   }
-  main #visiting div.content .panorama-container .panorama p.top {
+  #visiting div.content .panorama-container .panorama p.top {
     font-size: 22px;
   }
-  main #visiting div.content .panorama-container .panorama p.bottom {
+  #visiting div.content .panorama-container .panorama p.bottom {
     font-size: 18px;
   }
-  main #explore {
+  #explore {
     height: 865px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  main #explore .content {
+  #explore .content {
     border: 2px solid red;
     height: 715px;
     display: grid;
     grid-template-columns: 660px 720px;
     grid-template-rows: 700px;
+    justify-content: space-between;
   }
-  main #explore .content .text-content {
+  #explore .content .text-content {
     position: relative;
   }
-  main #explore .content .text-content p {
+  #explore .content .text-content p {
     position: absolute;
+    width: 100%;
   }
-  main #explore .content .text-content .first {
+  #explore .content .text-content .first {
     top: 193px;
   }
-  main #explore .content .text-content .second {
+  #explore .content .text-content .second {
     top: 295px;
   }
-  main #explore .content .text-content .third {
+  #explore .content .text-content .second .yellow {
+    color: rgb(157, 134, 101);
+  }
+  #explore .content .text-content .third {
     top: 397px;
+  }
+  #explore .content .slide-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-top: 15px;
+  }
+  #explore .content .slide-content div.cleaned {
+    border: 2px solid red;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 700px;
+    width: 720px;
+    z-index: 1;
+  }
+  #explore .content .slide-content div.cleaned img.cleaned {
+    width: 100%;
+    height: 100%;
+  }
+  #explore .content .slide-content div.yellow {
+    border: 2px solid red;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 700px;
+    width: 440px;
+    z-index: 2;
+  }
+  #explore .content .slide-content div.yellow img.yellow {
+    object-fit: none;
+    width: 100%;
+    height: 100%;
+  }
+  #video {
+    padding: 75px 0;
+  }
+  #video div.content {
+    height: 1246px;
+  }
+  #video div.content h2 {
+    width: 610px;
+    display: inline-block;
+  }
+  #video div.content p {
+    display: inline-block;
+    width: 720px;
+    margin-left: 105px;
+  }
+  #video div.content div.large {
+    height: 735px;
+    width: 100%;
+    margin-top: 75px;
+  }
+  #video div.content .video-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 42px;
+  }
+  #video div.content .video-container .item {
+    width: 452px;
+    height: 254px;
+  }
+  #video div.content .scroller-holder {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+  }
+  #video div.content .scroller-holder .scroller {
+    width: 200px;
+    height: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+  }
+  #video div.content .scroller-holder .scroller .arrow-holder {
+    width: 10px;
+    height: 12px;
+    margin-top: 8px;
+  }
+  #video div.content .scroller-holder .scroller .point-holder {
+    width: 12px;
+    height: 12px;
+  }
+  #gallery {
+    padding-top: 75px;
+  }
+  #gallery .content {
+    height: 2125px;
+  }
+  #gallery .content .container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 125px;
+  }
+  #gallery .content .container .column {
+    width: 456px;
+    display: flex;
+    flex-direction: column;
+  }
+  #gallery .content .container .column .item {
+    padding-bottom: 24px;
+  }
+  #gallery .content .container .central {
+    transform: translateY(-50px);
+  }
+  #tickets {
+    padding: 75px 0;
+  }
+  #tickets .content {
+    height: 743px;
+  }
+  #tickets .content .container {
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 75px;
+  }
+  #tickets .content .container .item {
+    width: 720px;
+    height: 550px;
+    position: relative;
+  }
+  #tickets .content .container .item h5 {
+    font-family: Roboto, sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 100%;
+  }
+  #tickets .content .container .item label {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 100%;
+  }
+  #tickets .content .container .item .ticket-type {
+    position: absolute;
+    left: 60px;
+    top: 0;
+    width: 270px;
+    height: 211px;
+  }
+  #tickets .content .container .item .ticket-type ul {
+    margin-top: 50px;
+    list-style: none;
+    height: 128px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  #tickets .content .container .item .ticket-type ul li {
+    position: relative;
+    width: 230px;
+    height: 26px;
+    color: black;
+  }
+  #tickets .content .container .item .ticket-type ul li input {
+    width: 17px;
+    height: 17px;
+  }
+  #tickets .content .container .item .ticket-type ul li label {
+    position: relative;
+    left: 23px;
+  }
+  #tickets .content .container .amount {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150px;
+    height: 341px;
+  }
+  #tickets .content .container .amount h5 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  #tickets .content .container .amount .basic {
+    top: 58px;
+  }
+  #tickets .content .container .amount .senior {
+    top: 159px;
+  }
+  #tickets .content .container .amount .ticket-pick {
+    width: 150px;
+    height: 91px;
+    position: absolute;
+  }
+  #tickets .content .container .amount .ticket-pick .counter {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    border: 3px solid black;
+    width: 150px;
+    height: 50px;
+    top: 41px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter button, #tickets .content .container .amount .ticket-pick .counter input {
+    border: none;
+    background-color: white;
+    color: black;
+    width: 30px;
+    text-align: center;
+    display: inline-block;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 100%;
+  }
+  #tickets .content .container #total {
+    width: 150px;
+    height: 33px;
+    top: 300px;
+    position: absolute;
+  }
+  #tickets .content .container #buy {
+    width: 175px;
+    height: 50px;
+    top: 393px;
+    right: 0;
+    position: absolute;
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 100%;
+    letter-spacing: 2px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: black;
+    color: white;
+  }
+  div.hall {
+    width: 1920px;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
+  }
+  div.hall img {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  #contacts {
+    padding: 75px 0;
+  }
+  #contacts .content {
+    height: 813px;
+  }
+  #contacts .content .container {
+    padding-top: 75px;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+  }
+  #contacts .content .container .description {
+    width: 282px;
+    height: 244px;
+    position: relative;
+  }
+  #contacts .content .container .description h5 {
+    width: 227px;
+    font-family: Roboto, sans-serif;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 100%;
+  }
+  #contacts .content .container .description ul {
+    position: absolute;
+    top: 116px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 128px;
+    list-style: none;
+  }
+  #contacts .content .container .description ul li {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 100%;
+  }
+  #contacts .content .container .map {
+    width: 960px;
+    height: 620px;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    height: 392px;
+    width: 100%;
+  }
+  footer .content {
+    width: 1440px;
+    height: 392px;
+    position: relative;
+  }
+  footer .content .logo {
+    position: absolute;
+    top: 75px;
+    left: 0;
+  }
+  footer .content nav {
+    width: 363px;
+    height: 128px;
+    position: absolute;
+    top: 87px;
+    left: 340px;
+  }
+  footer .content nav ul {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    justify-content: space-between;
+    align-content: space-between;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    list-style: none;
+  }
+  footer .content nav ul li a {
+    font-family: Roboto, sans-serif;
+    font-weight: 200;
+    font-size: 22px;
+    line-height: 100%;
+    letter-spacing: 2px;
+    color: white;
+    text-decoration: none;
+  }
+  .logo {
+    width: 215px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .logo img.pyramid {
+    width: 49px;
+    height: 26px;
+  }
+  .logo h3 {
+    color: white;
+    font-family: Forum, serif;
+    font-weight: 200;
+    font-size: 28px;
+    line-height: 100%;
+    letter-spacing: 5px;
+    text-transform: uppercase;
   }
 }
 
