--- a/style.scss
+++ b/style.scss
@@ -6,41 +6,15 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-
     #line {
       height: 100%;
       width: 1440px;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-
-      #logo {
-        width: 215px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-
-        img.pyramid {
-          width: 49px;
-          height: 26px;
-        }
-
-        h3 {
-          color: white;
-          font-family: Forum, serif;
-          font-weight: 200;
-          font-size: 28px;
-          line-height: 100%;
-          letter-spacing: 5px;
-          text-transform: uppercase;
-        }
-      }
-
       nav {
         height: 100%;
         width: 775px;
-
         ul {
           height: 100%;
           width: 100%;
@@ -49,7 +23,6 @@
           flex-direction: row;
           align-items: center;
           justify-content: space-between;
-
           li {
             a {
               text-decoration: none;
@@ -65,26 +38,22 @@
     }
   }
 
-
   main {
     section {
       width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
-
       div.bar {
         background-color: rgba(113, 7, 7, 1);
         height: 3px;
         width: 100%;
         margin-top: 25px;
       }
-
-      div.content {
+      .content {
         width: 1440px;
         height: 100%;
       }
-
       h2 {
         font-family: Forum, serif;
         font-weight: 400;
@@ -92,7 +61,6 @@
         line-height: 90px;
         letter-spacing: 5px;
       }
-
       p {
         font-family: Roboto, serif;
         font-weight: 300;
@@ -100,178 +68,506 @@
         line-height: 38.5px;
       }
     }
+  }
 
-    #welcome {
-      height: 810px;
-
-      div.content {
-        position: relative;
-
-        div.text-content {
+  #welcome {
+    height: 810px;
+    div.content {
+      position: relative;
+      div.text-content {
+        position: absolute;
+        top: 150px;
+        h1 {
+          position: relative;
+          font-weight: 400;
+          font-size: 80px;
+          line-height: 90px;
+          letter-spacing: 5px;
+          z-index: 2;
+        }
+        h4 {
+          width: 445px;
+          height: 33px;
           position: absolute;
-          top: 150px;
+          top: 205px;
+          font-family: Roboto, serif;
+          font-weight: 300;
+          font-size: 28px;
+          line-height: 100%;
+          letter-spacing: 2px;
+          z-index: 2;
+        }
+        button {
+          width: 360px;
+          height: 75px;
+          position: absolute;
+          top: 313px;
+          border-radius: 10px;
+          z-index: 2;
+          font-family: Roboto, serif;
+          font-weight: 300;
+          font-size: 22px;
+          line-height: 100%;
+          letter-spacing: 2px;
+          text-align: center;
+          vertical-align: middle;
+        }
+      }
+      img {
+        z-index: 1;
+        width: 1000px;
+        top: 0;
+        right: 0;
+        position: absolute;
+      }
+    }
+  }
 
-          h1 {
-            position: relative;
-            font-weight: 400;
-            font-size: 80px;
-            line-height: 90px;
-            letter-spacing: 5px;
-            z-index: 2;
+  #visiting {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 75px;
+    div.content {
+      height: 1116px;
+      width: 1440px;
+      margin-top: 75px;
+      h2 {
+        width: 100%;
+        height: 90px;
+      }
+      .panorama-container {
+        margin-top: 75px;
+        display: grid;
+        justify-content: space-between;
+        align-content: space-evenly;
+        grid-template-columns: repeat(3, 440px);
+        grid-template-rows: repeat(2, 424px);
+        row-gap: 75px;
+        .panorama {
+          img {
+            width: 440px;
+            height: 285px;
           }
+          h3 {
+            margin-top: 25px;
+            font-family: Forum, serif;
+            font-weight: 400;
+            font-size: 32px;
+            line-height: 100%;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+          }
+          div.bar {
+            margin-top: 10px;
+            width: 300px;
+          }
+          p {
+            font-family: Roboto, sans-serif;
+            line-height: 100%;
+            font-weight: 200;
+            color: rgba(0, 0, 0, 1);
+            margin-top: 10px;
+          }
+          p.top {
+            font-size: 22px;
+          }
+          p.bottom {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
 
-          h4 {
-            width: 445px;
-            height: 33px;
-            position: absolute;
-            top: 205px;
-            font-family: Roboto, serif;
-            font-weight: 300;
+  #explore {
+    height: 865px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .content {
+      border: 2px solid red;
+      height: 715px;
+      display: grid;
+      grid-template-columns: 660px 720px;
+      grid-template-rows: 700px;
+      justify-content: space-between;
+      .text-content {
+        position: relative;
+        p {
+          position: absolute;
+          width: 100%;
+        }
+        .first {
+          top: 193px;
+        }
+        .second {
+          top: 295px;
+          .yellow {
+            color: rgba(157, 134, 101, 1);
+          }
+        }
+        .third {
+          top: 397px;
+        }
+      }
+      .slide-content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-top: 15px;
+        div.cleaned {
+          border: 2px solid red ;
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 700px;
+          width: 720px;
+          z-index: 1;
+          img.cleaned {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        div.yellow {
+          border: 2px solid red ;
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 700px;
+          width: 440px;
+          z-index: 2;
+          img.yellow {
+            object-fit: none;
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  #video {
+    padding: 75px 0;
+    div.content {
+      height: 1246px;
+      h2 {
+        width: 610px;
+        display: inline-block;
+      }
+      p {
+        display: inline-block;
+        width: 720px;
+        margin-left: 105px;
+      }
+      div.large {
+        height: 735px;
+        width: 100%;
+        margin-top: 75px;
+      }
+      .video-container {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 42px;
+        .item {
+          width: 452px;
+          height: 254px;
+        }
+      }
+      .scroller-holder {
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
+        .scroller {
+          width: 200px;
+          height: 12px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          align-content: center;
+          .arrow-holder {
+            width: 10px;
+            height: 12px;
+            margin-top: 8px;
+          }
+          .point-holder {
+            width: 12px;
+            height: 12px;
+          }
+        }
+      }
+    }
+  }
+
+  #gallery {
+    padding-top: 75px;
+    .content {
+      height: 2125px;
+      .container {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 125px;
+        .column {
+          width: 456px;
+          display: flex;
+          flex-direction: column;
+          .item {
+            padding-bottom: 24px;
+          }
+        }
+        .central {
+          transform: translateY(-50px);
+        }
+      }
+    }
+  }
+
+  #tickets {
+    padding: 75px 0;
+    .content {
+      height: 743px;
+      .container {
+        border: 2px solid red;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 75px;
+        .item {
+          width: 720px;
+          height: 550px;
+          position: relative;
+          h5 {
+            font-family: Roboto, sans-serif;
+            font-weight: 700;
             font-size: 28px;
             line-height: 100%;
-            letter-spacing: 2px;
-            z-index: 2;
           }
-
-          button {
-            width: 360px;
-            height: 75px;
-            position: absolute;
-            top: 313px;
-            border-radius: 10px;
-            z-index: 2;
-            font-family: Roboto, serif;
+          label {
+            font-family: Roboto, sans-serif;
             font-weight: 300;
             font-size: 22px;
             line-height: 100%;
-            letter-spacing: 2px;
-            text-align: center;
-            vertical-align: middle;
+          }
+          .ticket-type {
+            position: absolute;
+            left: 60px;
+            top: 0;
+            width: 270px;
+            height: 211px;
+            ul {
+              margin-top: 50px;
+              list-style: none;
+              height: 128px;
+              display: flex;
+              justify-content: space-between;
+              flex-direction: column;
+              li {
+                position: relative;
+                width: 230px;
+                height: 26px;
+                color: black;
+                input {
+                  width: 17px;
+                  height: 17px;
+                }
+                label {
+                  position: relative;
+                  left: 23px;
+                }
+              }
+            }
           }
         }
-
-        img {
-          z-index: 1;
-          width: 1000px;
+        .amount {
+          position: absolute;
           top: 0;
           right: 0;
+          width: 150px;
+          height: 341px;
+          h5 {
+            position: absolute;
+            right: 0;
+            top: 0;
+          }
+          .basic {
+            top: 58px;
+          }
+          .senior {
+            top: 159px;
+          }
+          .ticket-pick {
+            width: 150px;
+            height: 91px;
+            position: absolute;
+            .counter {
+              display: flex;
+              justify-content: space-evenly;
+              position: absolute;
+              border: 3px solid black;
+              width: 150px;
+              height: 50px;
+              top: 41px;
+              button, input {
+                border: none;
+                background-color: white;
+                color:  black;
+                width: 30px;
+                text-align: center;
+                display: inline-block;
+                font-family: Roboto, sans-serif;
+                font-weight: 300;
+                font-size: 22px;
+                line-height: 100%;
+              }
+            }
+          }
+        }
+        #total {
+          width: 150px;
+          height: 33px;
+          top: 300px;
           position: absolute;
         }
+        #buy {
+          width: 175px;
+          height: 50px;
+          top: 393px;
+          right: 0;
+          position: absolute;
+          font-family: Roboto, sans-serif;
+          font-weight: 300;
+          font-size: 22px;
+          line-height: 100%;
+          letter-spacing: 2px;
+          text-align: center;
+          vertical-align: middle;
+          background-color: black;
+          color: white;
+        }
       }
     }
+  }
 
+  div.hall {
+    width: 1920px;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
+    img {
+      position: absolute;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
 
-    #visiting {
-      display: flex;
-      justify-content: center;
-      padding-bottom: 75px;
-
-      div.content {
-        height: 1116px;
-        width: 1440px;
-        margin-top: 75px;
-
-        h2 {
-          width: 100%;
-          height: 90px;
+  #contacts {
+    padding: 75px 0;
+    .content {
+      height: 813px;
+      .container {
+        padding-top: 75px;
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
+        .description {
+          width: 282px;
+          height: 244px;
+          position: relative;
+          h5 {
+            width: 227px;
+            font-family: Roboto, sans-serif;
+            font-weight: 500;
+            font-size: 28px;
+            line-height: 100%;
+          }
+          ul {
+            position: absolute;
+            top: 116px;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 128px;
+            list-style: none;
+            li {
+              font-family: Roboto, sans-serif;
+              font-weight: 300;
+              font-size: 22px;
+              line-height: 100%;
+            }
+          }
         }
+        .map {
+          width: 960px;
+          height: 620px;
+        }
+      }
+    }
+  }
 
-        .panorama-container {
-          margin-top: 75px;
+  footer {
+    display: flex;
+    justify-content: center;
+    height: 392px;
+    width: 100%;
+    .content {
+      width: 1440px;
+      height: 392px;
+      position: relative;
+      .logo {
+        position: absolute;
+        top: 75px;
+        left: 0;
+      }
+      nav {
+        width: 363px;
+        height: 128px;
+        position: absolute;
+        top: 87px;
+        left: 340px;
+        ul {
+          height: 100%;
+          width: 100%;
           display: grid;
           justify-content: space-between;
-          align-content: space-evenly;
-          grid-template-columns: repeat(3, 440px);
-          grid-template-rows: repeat(2, 424px);
-          row-gap: 75px;
-
-          .panorama {
-            img {
-              width: 440px;
-              height: 285px;
-            }
-
-            h3 {
-              margin-top: 25px;
-              font-family: Forum, serif;
-              font-weight: 400;
-              font-size: 32px;
-              line-height: 100%;
-              letter-spacing: 5px;
-              text-transform: uppercase;
-            }
-
-            div.bar {
-              margin-top: 10px;
-              width: 300px;
-            }
-            p {
+          align-content: space-between;
+          grid-template-rows: repeat(3, 1fr);
+          grid-template-columns: repeat(2, 1fr);
+          list-style: none;
+          li {
+            a {
               font-family: Roboto, sans-serif;
-              line-height: 100%;
               font-weight: 200;
-              color: rgba(0, 0, 0, 1);
-              margin-top: 10px;
-            }
-            p.top {
               font-size: 22px;
-            }
-            p.bottom {
-              font-size: 18px;
+              line-height: 100%;
+              letter-spacing: 2px;
+              color: white;
+              text-decoration: none;
             }
           }
         }
       }
     }
+  }
 
-    #explore {
-      height: 865px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .content {
-        height: 715px;
-        display: grid;
-        grid-template-columns: 660px 720px;
-        grid-template-rows: 700px;
-        .text-content {
-          position: relative;
-          p {
-            position: absolute;
-            width: 100%;
-          }
-          .first {
-            top: 193px;
-          }
-          .second {
-            top: 295px;
-          }
-          .third {
-            top: 397px;
-          }
-        }
-
-        .slide-content {
-          position: relative;
-          .cleaned-container {
-            border: 2px solid red ;
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 100%;
-            z-index: 1;
-          }
-          .yellow-container {
-            border: 2px solid red ;
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 440px;
-            z-index: 2;
-          }
-        }
-      }
+  .logo {
+    width: 215px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    img.pyramid {
+      width: 49px;
+      height: 26px;
+    }
+    h3 {
+      color: white;
+      font-family: Forum, serif;
+      font-weight: 200;
+      font-size: 28px;
+      line-height: 100%;
+      letter-spacing: 5px;
+      text-transform: uppercase;
     }
   }
 }
