--- a/style.scss
+++ b/style.scss
@@ -547,6 +547,48 @@
           }
         }
       }
+      .social {
+        position: absolute;
+        width: 340px;
+        height: 48px;
+        top: 162px;
+        left: 1100px;
+        display: flex;
+        justify-content: space-between;
+        img {
+          height: 100%;
+          display: block;
+        }
+      }
+      .bar {
+        height: 3px;
+        width: 1940px;
+        top: 265px;
+        left: -250px;
+        position: absolute;
+        background-color: rgba(102, 102, 102, 1)
+      }
+      .bottom {
+        position: absolute;
+        top: 318px;
+        width: 100%;
+        height: 24px;
+        ul {
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          list-style: none;
+          li {
+            font-family: Roboto, sans-serif;
+            font-weight: 200;
+            font-size: 22px;
+            line-height: 22px;
+            letter-spacing: 2px;
+            color: white;
+          }
+        }
+      }
     }
   }
 
