--- a/style/common.scss
+++ b/style/common.scss
@@ -5,66 +5,53 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   width: 100%;
 }
 
 @font-face {
   font-family: 'Forum';
-  src: url('font/Forum-Regular.ttf') format('truetype');
+  src: url('../font/Forum-Regular.ttf') format('truetype');
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('font/Roboto-ExtraLight.ttf') format('truetype');
+  src: url('../font/Roboto-ExtraLight.ttf') format('truetype');
   font-style: normal;
   font-weight: 200; // Extra Light (Ultra Light)
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('font/Roboto-Light.ttf') format('truetype');
+  src: url('../font/Roboto-Light.ttf') format('truetype');
   font-style: normal;
   font-weight: 300; // Light
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('font/Roboto-Regular.ttf') format('truetype');
+  src: url('../font/Roboto-Regular.ttf') format('truetype');
   font-style: normal;
   font-weight: 400; // Normal
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('font/Roboto-Medium.ttf') format('truetype');
+  src: url('../font/Roboto-Medium.ttf') format('truetype');
   font-style: normal;
   font-weight: 500; // Medium
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('font/Roboto-Bold.ttf') format('truetype');
+  src: url('../font/Roboto-Bold.ttf') format('truetype');
   font-style: normal;
   font-weight: 700; // Bold
-}
-
-header {
-  #line {
-    #logo {
-    }
-    nav {
-      ul {
-        li {
-          a {
-            color: white;
-            text-decoration: none;
-          }
-        }
-      }
-    }
-  }
 }
 
 
@@ -77,44 +64,6 @@ main {
     font-family: Forum, serif;
   }
 }
-
-
-#welcome {
-  h1 {
-    color: white;
-    font-family: Forum, serif;
-  }
-  h4 {
-    color: white;
-  }
-  button {
-    background: rgba(113, 7, 7, 1);
-    transition: background-color 0.4s ease;
-    a {
-      text-decoration: none;
-      height: 100%;
-      width: 100%;
-      text-align: center;
-      font-family: Roboto, sans-serif;
-      font-weight: 300;
-      font-size: 22px;
-      line-height: 100%;
-      letter-spacing: 2px;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      span {
-
-      }
-    }
-  }
-  button:hover {
-    background: rgba(157, 134, 101, 1);
-    cursor: pointer;
-  }
-}
-
 
 #video {
   iframe {
