--- a/style/style.css
+++ b/style/style.css
@@ -1,40 +1,4 @@
 @media (min-width: 1920px) {
-  header {
-    height: 150px;
-    width: 100%;
-    background: rgb(3, 3, 3);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  header #line {
-    height: 100%;
-    width: 1440px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  header #line nav {
-    height: 100%;
-    width: 775px;
-  }
-  header #line nav ul {
-    height: 100%;
-    width: 100%;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-  header #line nav ul li a {
-    text-decoration: none;
-    font-family: Roboto, serif;
-    font-weight: 200;
-    font-size: 22px;
-    line-height: 100%;
-    letter-spacing: 2px;
-  }
   main section {
     width: 100%;
     display: flex;
@@ -63,111 +27,6 @@
     font-weight: 300;
     font-size: 22px;
     line-height: 38.5px;
-  }
-  #welcome {
-    height: 810px;
-  }
-  #welcome div.content {
-    position: relative;
-  }
-  #welcome div.content div.text-content {
-    position: absolute;
-    top: 150px;
-  }
-  #welcome div.content div.text-content h1 {
-    position: relative;
-    font-weight: 400;
-    font-size: 80px;
-    line-height: 90px;
-    letter-spacing: 5px;
-    z-index: 2;
-  }
-  #welcome div.content div.text-content h4 {
-    width: 445px;
-    height: 33px;
-    position: absolute;
-    top: 205px;
-    font-family: Roboto, serif;
-    font-weight: 300;
-    font-size: 28px;
-    line-height: 100%;
-    letter-spacing: 2px;
-    z-index: 2;
-  }
-  #welcome div.content div.text-content button {
-    width: 360px;
-    height: 75px;
-    position: absolute;
-    top: 313px;
-    border-radius: 10px;
-    z-index: 2;
-    font-family: Roboto, serif;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 100%;
-    letter-spacing: 2px;
-    text-align: center;
-    vertical-align: middle;
-  }
-  #welcome div.content img {
-    z-index: 1;
-    width: 1000px;
-    top: 0;
-    right: 0;
-    position: absolute;
-  }
-  #visiting {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 75px;
-  }
-  #visiting div.content {
-    height: 1116px;
-    width: 1440px;
-    margin-top: 75px;
-  }
-  #visiting div.content h2 {
-    width: 100%;
-    height: 90px;
-  }
-  #visiting div.content .panorama-container {
-    margin-top: 75px;
-    display: grid;
-    justify-content: space-between;
-    align-content: space-evenly;
-    grid-template-columns: repeat(3, 440px);
-    grid-template-rows: repeat(2, 424px);
-    row-gap: 75px;
-  }
-  #visiting div.content .panorama-container .panorama img {
-    width: 440px;
-    height: 285px;
-  }
-  #visiting div.content .panorama-container .panorama h3 {
-    margin-top: 25px;
-    font-family: Forum, serif;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 100%;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-  }
-  #visiting div.content .panorama-container .panorama div.bar {
-    margin-top: 10px;
-    width: 300px;
-  }
-  #visiting div.content .panorama-container .panorama p {
-    font-family: Roboto, sans-serif;
-    line-height: 100%;
-    font-weight: 200;
-    color: rgb(0, 0, 0);
-    margin-top: 10px;
-  }
-  #visiting div.content .panorama-container .panorama p.top {
-    font-size: 22px;
-  }
-  #visiting div.content .panorama-container .panorama p.bottom {
-    font-size: 18px;
   }
   #explore {
     height: 865px;
@@ -298,6 +157,7 @@
     margin-top: 125px;
   }
   #gallery .content .container .column {
+    position: relative;
     width: 456px;
     display: flex;
     flex-direction: column;
@@ -406,9 +266,15 @@
     text-align: center;
     display: inline-block;
     font-family: Roboto, sans-serif;
-    font-weight: 300;
     font-size: 22px;
     line-height: 100%;
+  }
+  #tickets .content .container .amount .ticket-pick .counter input {
+    font-weight: 300;
+  }
+  #tickets .content .container .amount .ticket-pick .counter button {
+    font-size: 32px;
+    font-weight: 400;
   }
   #tickets .content .container #total {
     width: 150px;
@@ -431,6 +297,13 @@
     vertical-align: middle;
     background-color: black;
     color: white;
+  }
+  #tickets .content .container #buy {
+    transition: color 0.5s ease, background-color 0.5s ease;
+  }
+  #tickets .content .container #buy:hover {
+    background: rgb(157, 134, 101);
+    color: black;
   }
   div.hall {
     width: 1920px;
