--- a/style/style.scss
+++ b/style/style.scss
@@ -1,43 +1,4 @@
 @media (min-width: 1920px) {
-  header {
-    height: 150px;
-    width: 100%;
-    background: rgba(3, 3, 3, 1);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    #line {
-      height: 100%;
-      width: 1440px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      nav {
-        height: 100%;
-        width: 775px;
-        ul {
-          height: 100%;
-          width: 100%;
-          list-style: none;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: space-between;
-          li {
-            a {
-              text-decoration: none;
-              font-family: Roboto, serif;
-              font-weight: 200;
-              font-size: 22px;
-              line-height: 100%;
-              letter-spacing: 2px;
-            }
-          }
-        }
-      }
-    }
-  }
-
   main {
     section {
       width: 100%;
@@ -66,115 +27,6 @@
         font-weight: 300;
         font-size: 22px;
         line-height: 38.5px;
-      }
-    }
-  }
-
-  #welcome {
-    height: 810px;
-    div.content {
-      position: relative;
-      div.text-content {
-        position: absolute;
-        top: 150px;
-        h1 {
-          position: relative;
-          font-weight: 400;
-          font-size: 80px;
-          line-height: 90px;
-          letter-spacing: 5px;
-          z-index: 2;
-        }
-        h4 {
-          width: 445px;
-          height: 33px;
-          position: absolute;
-          top: 205px;
-          font-family: Roboto, serif;
-          font-weight: 300;
-          font-size: 28px;
-          line-height: 100%;
-          letter-spacing: 2px;
-          z-index: 2;
-        }
-        button {
-          width: 360px;
-          height: 75px;
-          position: absolute;
-          top: 313px;
-          border-radius: 10px;
-          z-index: 2;
-          font-family: Roboto, serif;
-          font-weight: 300;
-          font-size: 22px;
-          line-height: 100%;
-          letter-spacing: 2px;
-          text-align: center;
-          vertical-align: middle;
-        }
-      }
-      img {
-        z-index: 1;
-        width: 1000px;
-        top: 0;
-        right: 0;
-        position: absolute;
-      }
-    }
-  }
-
-  #visiting {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 75px;
-    div.content {
-      height: 1116px;
-      width: 1440px;
-      margin-top: 75px;
-      h2 {
-        width: 100%;
-        height: 90px;
-      }
-      .panorama-container {
-        margin-top: 75px;
-        display: grid;
-        justify-content: space-between;
-        align-content: space-evenly;
-        grid-template-columns: repeat(3, 440px);
-        grid-template-rows: repeat(2, 424px);
-        row-gap: 75px;
-        .panorama {
-          img {
-            width: 440px;
-            height: 285px;
-          }
-          h3 {
-            margin-top: 25px;
-            font-family: Forum, serif;
-            font-weight: 400;
-            font-size: 32px;
-            line-height: 100%;
-            letter-spacing: 5px;
-            text-transform: uppercase;
-          }
-          div.bar {
-            margin-top: 10px;
-            width: 300px;
-          }
-          p {
-            font-family: Roboto, sans-serif;
-            line-height: 100%;
-            font-weight: 200;
-            color: rgba(0, 0, 0, 1);
-            margin-top: 10px;
-          }
-          p.top {
-            font-size: 22px;
-          }
-          p.bottom {
-            font-size: 18px;
-          }
-        }
       }
     }
   }
@@ -307,6 +159,7 @@
         justify-content: space-between;
         margin-top: 125px;
         .column {
+          position: relative;
           width: 456px;
           display: flex;
           flex-direction: column;
@@ -413,9 +266,15 @@
                 text-align: center;
                 display: inline-block;
                 font-family: Roboto, sans-serif;
-                font-weight: 300;
                 font-size: 22px;
                 line-height: 100%;
+              }
+              input {
+                font-weight: 300;
+              }
+              button {
+                font-size: 32px;
+                font-weight: 400;
               }
             }
           }
@@ -441,6 +300,13 @@
           vertical-align: middle;
           background-color: black;
           color: white;
+        }
+        #buy {
+          transition: color 0.5s ease, background-color 0.5s ease;
+        }
+        #buy:hover {
+          background: rgba(157, 134, 101, 1);
+          color: black;
         }
       }
     }
