feat: presave before editing

--- a/style/style.scss
+++ b/style/style.scss
@@ -31,73 +31,6 @@
     }
   }
 
-  #explore {
-    height: 865px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .content {
-      border: 2px solid red;
-      height: 715px;
-      display: grid;
-      grid-template-columns: 660px 720px;
-      grid-template-rows: 700px;
-      justify-content: space-between;
-      .text-content {
-        position: relative;
-        p {
-          position: absolute;
-          width: 100%;
-        }
-        .first {
-          top: 193px;
-        }
-        .second {
-          top: 295px;
-          .yellow {
-            color: rgba(157, 134, 101, 1);
-          }
-        }
-        .third {
-          top: 397px;
-        }
-      }
-      .slide-content {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        margin-top: 15px;
-        div.cleaned {
-          border: 2px solid red ;
-          position: absolute;
-          left: 0;
-          top: 0;
-          height: 700px;
-          width: 720px;
-          z-index: 1;
-          img.cleaned {
-            width: 100%;
-            height: 100%;
-          }
-        }
-        div.yellow {
-          border: 2px solid red ;
-          position: absolute;
-          left: 0;
-          top: 0;
-          height: 700px;
-          width: 440px;
-          z-index: 2;
-          img.yellow {
-            object-fit: none;
-            width: 100%;
-            height: 100%;
-          }
-        }
-      }
-    }
-  }
-
   #video {
     padding: 75px 0;
     div.content {
@@ -145,168 +78,6 @@
             width: 12px;
             height: 12px;
           }
-        }
-      }
-    }
-  }
-
-  #gallery {
-    padding-top: 75px;
-    .content {
-      height: 2125px;
-      .container {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 125px;
-        .column {
-          position: relative;
-          width: 456px;
-          display: flex;
-          flex-direction: column;
-          .item {
-            padding-bottom: 24px;
-          }
-        }
-        .central {
-          transform: translateY(-50px);
-        }
-      }
-    }
-  }
-
-  #tickets {
-    padding: 75px 0;
-    .content {
-      height: 743px;
-      .container {
-        border: 2px solid red;
-        display: flex;
-        justify-content: space-between;
-        margin-top: 75px;
-        .item {
-          width: 720px;
-          height: 550px;
-          position: relative;
-          h5 {
-            font-family: Roboto, sans-serif;
-            font-weight: 700;
-            font-size: 28px;
-            line-height: 100%;
-          }
-          label {
-            font-family: Roboto, sans-serif;
-            font-weight: 300;
-            font-size: 22px;
-            line-height: 100%;
-          }
-          .ticket-type {
-            position: absolute;
-            left: 60px;
-            top: 0;
-            width: 270px;
-            height: 211px;
-            ul {
-              margin-top: 50px;
-              list-style: none;
-              height: 128px;
-              display: flex;
-              justify-content: space-between;
-              flex-direction: column;
-              li {
-                position: relative;
-                width: 230px;
-                height: 26px;
-                color: black;
-                input {
-                  width: 17px;
-                  height: 17px;
-                }
-                label {
-                  position: relative;
-                  left: 23px;
-                }
-              }
-            }
-          }
-        }
-        .amount {
-          position: absolute;
-          top: 0;
-          right: 0;
-          width: 150px;
-          height: 341px;
-          h5 {
-            position: absolute;
-            right: 0;
-            top: 0;
-          }
-          .basic {
-            top: 58px;
-          }
-          .senior {
-            top: 159px;
-          }
-          .ticket-pick {
-            width: 150px;
-            height: 91px;
-            position: absolute;
-            .counter {
-              display: flex;
-              justify-content: space-evenly;
-              position: absolute;
-              border: 3px solid black;
-              width: 150px;
-              height: 50px;
-              top: 41px;
-              button, input {
-                border: none;
-                background-color: white;
-                color:  black;
-                width: 30px;
-                text-align: center;
-                display: inline-block;
-                font-family: Roboto, sans-serif;
-                font-size: 22px;
-                line-height: 100%;
-              }
-              input {
-                font-weight: 300;
-              }
-              button {
-                font-size: 32px;
-                font-weight: 400;
-              }
-            }
-          }
-        }
-        #total {
-          width: 150px;
-          height: 33px;
-          top: 300px;
-          position: absolute;
-        }
-        #buy {
-          width: 175px;
-          height: 50px;
-          top: 393px;
-          right: 0;
-          position: absolute;
-          font-family: Roboto, sans-serif;
-          font-weight: 300;
-          font-size: 22px;
-          line-height: 100%;
-          letter-spacing: 2px;
-          text-align: center;
-          vertical-align: middle;
-          background-color: black;
-          color: white;
-        }
-        #buy {
-          transition: color 0.5s ease, background-color 0.5s ease;
-        }
-        #buy:hover {
-          background: rgba(157, 134, 101, 1);
-          color: black;
         }
       }
     }
@@ -409,6 +180,10 @@
               letter-spacing: 2px;
               color: white;
               text-decoration: none;
+              transition: color 0.35s ease;
+            }
+            a:hover {
+              color: rgba(157, 134, 101, 1);
             }
           }
         }
