--- a/style/style.css
+++ b/style/style.css
@@ -28,72 +28,6 @@
     font-size: 22px;
     line-height: 38.5px;
   }
-  #explore {
-    height: 865px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  #explore .content {
-    border: 2px solid red;
-    height: 715px;
-    display: grid;
-    grid-template-columns: 660px 720px;
-    grid-template-rows: 700px;
-    justify-content: space-between;
-  }
-  #explore .content .text-content {
-    position: relative;
-  }
-  #explore .content .text-content p {
-    position: absolute;
-    width: 100%;
-  }
-  #explore .content .text-content .first {
-    top: 193px;
-  }
-  #explore .content .text-content .second {
-    top: 295px;
-  }
-  #explore .content .text-content .second .yellow {
-    color: rgb(157, 134, 101);
-  }
-  #explore .content .text-content .third {
-    top: 397px;
-  }
-  #explore .content .slide-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin-top: 15px;
-  }
-  #explore .content .slide-content div.cleaned {
-    border: 2px solid red;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 700px;
-    width: 720px;
-    z-index: 1;
-  }
-  #explore .content .slide-content div.cleaned img.cleaned {
-    width: 100%;
-    height: 100%;
-  }
-  #explore .content .slide-content div.yellow {
-    border: 2px solid red;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 700px;
-    width: 440px;
-    z-index: 2;
-  }
-  #explore .content .slide-content div.yellow img.yellow {
-    object-fit: none;
-    width: 100%;
-    height: 100%;
-  }
   #video {
     padding: 75px 0;
   }
@@ -144,166 +78,6 @@
   #video div.content .scroller-holder .scroller .point-holder {
     width: 12px;
     height: 12px;
-  }
-  #gallery {
-    padding-top: 75px;
-  }
-  #gallery .content {
-    height: 2125px;
-  }
-  #gallery .content .container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 125px;
-  }
-  #gallery .content .container .column {
-    position: relative;
-    width: 456px;
-    display: flex;
-    flex-direction: column;
-  }
-  #gallery .content .container .column .item {
-    padding-bottom: 24px;
-  }
-  #gallery .content .container .central {
-    transform: translateY(-50px);
-  }
-  #tickets {
-    padding: 75px 0;
-  }
-  #tickets .content {
-    height: 743px;
-  }
-  #tickets .content .container {
-    border: 2px solid red;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 75px;
-  }
-  #tickets .content .container .item {
-    width: 720px;
-    height: 550px;
-    position: relative;
-  }
-  #tickets .content .container .item h5 {
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 100%;
-  }
-  #tickets .content .container .item label {
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 100%;
-  }
-  #tickets .content .container .item .ticket-type {
-    position: absolute;
-    left: 60px;
-    top: 0;
-    width: 270px;
-    height: 211px;
-  }
-  #tickets .content .container .item .ticket-type ul {
-    margin-top: 50px;
-    list-style: none;
-    height: 128px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  #tickets .content .container .item .ticket-type ul li {
-    position: relative;
-    width: 230px;
-    height: 26px;
-    color: black;
-  }
-  #tickets .content .container .item .ticket-type ul li input {
-    width: 17px;
-    height: 17px;
-  }
-  #tickets .content .container .item .ticket-type ul li label {
-    position: relative;
-    left: 23px;
-  }
-  #tickets .content .container .amount {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 150px;
-    height: 341px;
-  }
-  #tickets .content .container .amount h5 {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  #tickets .content .container .amount .basic {
-    top: 58px;
-  }
-  #tickets .content .container .amount .senior {
-    top: 159px;
-  }
-  #tickets .content .container .amount .ticket-pick {
-    width: 150px;
-    height: 91px;
-    position: absolute;
-  }
-  #tickets .content .container .amount .ticket-pick .counter {
-    display: flex;
-    justify-content: space-evenly;
-    position: absolute;
-    border: 3px solid black;
-    width: 150px;
-    height: 50px;
-    top: 41px;
-  }
-  #tickets .content .container .amount .ticket-pick .counter button, #tickets .content .container .amount .ticket-pick .counter input {
-    border: none;
-    background-color: white;
-    color: black;
-    width: 30px;
-    text-align: center;
-    display: inline-block;
-    font-family: Roboto, sans-serif;
-    font-size: 22px;
-    line-height: 100%;
-  }
-  #tickets .content .container .amount .ticket-pick .counter input {
-    font-weight: 300;
-  }
-  #tickets .content .container .amount .ticket-pick .counter button {
-    font-size: 32px;
-    font-weight: 400;
-  }
-  #tickets .content .container #total {
-    width: 150px;
-    height: 33px;
-    top: 300px;
-    position: absolute;
-  }
-  #tickets .content .container #buy {
-    width: 175px;
-    height: 50px;
-    top: 393px;
-    right: 0;
-    position: absolute;
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 100%;
-    letter-spacing: 2px;
-    text-align: center;
-    vertical-align: middle;
-    background-color: black;
-    color: white;
-  }
-  #tickets .content .container #buy {
-    transition: color 0.5s ease, background-color 0.5s ease;
-  }
-  #tickets .content .container #buy:hover {
-    background: rgb(157, 134, 101);
-    color: black;
   }
   div.hall {
     width: 1920px;
@@ -403,6 +177,10 @@
     letter-spacing: 2px;
     color: white;
     text-decoration: none;
+    transition: color 0.35s ease;
+  }
+  footer .content nav ul li a:hover {
+    color: rgb(157, 134, 101);
   }
   footer .content .social {
     position: absolute;
