--- a/style/welcome.css
+++ b/style/welcome.css
@@ -20,14 +20,11 @@
   #welcome .content .text-content h4 {
     width: 445px;
     height: 33px;
-    position: absolute;
     top: 205px;
-    font-family: Roboto, serif;
     font-weight: 300;
     font-size: 28px;
     line-height: 100%;
     letter-spacing: 2px;
-    z-index: 2;
   }
   #welcome .content .text-content .discover-button {
     width: 360px;
@@ -57,22 +54,11 @@
     position: absolute;
   }
   #welcome .content .welcome-slider-io {
-    z-index: 100;
-    position: absolute;
     width: 600px;
     height: 120px;
-    bottom: 0;
-    right: 0;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: black;
-    font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 22px;
     line-height: 40px;
-    vertical-align: middle;
-    text-transform: uppercase;
   }
   #welcome .content .welcome-slider-io .welcome-slider-io-metadata {
     width: 76px;
@@ -100,17 +86,9 @@
   #welcome .content .welcome-slider-io .welcome-slider-io-pointer {
     width: 180px;
     height: 16px;
-    display: flex;
-    justify-content: space-between;
   }
-  #welcome .content .welcome-slider-io .welcome-slider-io-pointer button {
+  #welcome .content .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point {
     width: 16px;
-    height: 100%;
-    background-color: white;
-    transition: background-color ease 0.3s;
-  }
-  #welcome .content .welcome-slider-io .welcome-slider-io-pointer button:hover {
-    background-color: rgb(157, 134, 101);
   }
   #welcome .content .welcome-slider-io .welcome-slider-io-swiper {
     width: 80px;
@@ -129,15 +107,15 @@
     height: 100%;
     width: 100%;
   }
-  #welcome .content .welcome-slider-io .welcome-slider-io-swiper .welcome-slider-io-left-arrow img {
-    transform: scaleX(-1);
-  }
 }
 #welcome h1 {
   color: white;
   font-family: Forum, serif;
 }
 #welcome h4 {
+  z-index: 2;
+  font-family: Roboto, serif;
+  position: absolute;
   color: white;
 }
 #welcome .discover-button {
@@ -162,6 +140,34 @@
 #welcome .discover-button:hover {
   background: rgb(157, 134, 101);
   cursor: pointer;
+}
+#welcome .welcome-slider-io {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  background-color: black;
+  font-family: Roboto, sans-serif;
+  vertical-align: middle;
+  text-transform: uppercase;
+}
+#welcome .welcome-slider-io .welcome-slider-io-pointer {
+  display: flex;
+  justify-content: space-between;
+}
+#welcome .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point {
+  height: 100%;
+  background-color: white;
+  transition: background-color ease 0.33s;
+}
+#welcome .welcome-slider-io .welcome-slider-io-pointer .welcome-slider-io-point:hover {
+  background-color: rgb(157, 134, 101);
+}
+#welcome .welcome-slider-io .welcome-slider-io-left-arrow img {
+  transform: scaleX(-1);
 }
 
 /*# sourceMappingURL=welcome.css.map */
