--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -17,14 +17,11 @@
         h4 {
           width: 445px;
           height: 33px;
-          position: absolute;
           top: 205px;
-          font-family: Roboto, serif;
           font-weight: 300;
           font-size: 28px;
           line-height: 100%;
           letter-spacing: 2px;
-          z-index: 2;
         }
         .discover-button {
           width: 360px;
@@ -56,22 +53,11 @@
         position: absolute;
       }
       .welcome-slider-io {
-        z-index: 100;
-        position: absolute;
         width: 600px;
         height: 120px;
-        bottom: 0;
-        right: 0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        background-color: black;
-        font-family: Roboto, sans-serif;
         font-weight: 400;
         font-size: 22px;
         line-height: 40px;
-        vertical-align: middle;
-        text-transform: uppercase;
         .welcome-slider-io-metadata {
           width: 76px;
           height: 40px;
@@ -98,16 +84,8 @@
         .welcome-slider-io-pointer {
           width: 180px;
           height: 16px;
-          display: flex;
-          justify-content: space-between;
-          button {
+          .welcome-slider-io-point {
             width: 16px;
-            height: 100%;
-            background-color: white;
-            transition: background-color ease 0.3s;
-          }
-          button:hover {
-            background-color: rgba(157, 134, 101, 1);
           }
         }
         .welcome-slider-io-swiper {
@@ -126,11 +104,6 @@
               width: 100%;
             }
           }
-          .welcome-slider-io-left-arrow {
-            img {
-              transform: scaleX(-1);
-            }
-          }
         }
       }
     }
@@ -145,6 +118,9 @@
     font-family: Forum, serif;
   }
   h4 {
+    z-index: 2;
+    font-family: Roboto, serif;
+    position: absolute;
     color: white;
   }
   .discover-button {
@@ -169,5 +145,35 @@
   .discover-button:hover {
     background: rgba(157, 134, 101, 1);
     cursor: pointer;
+  }
+  .welcome-slider-io {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+    background-color: black;
+    font-family: Roboto, sans-serif;
+    vertical-align: middle;
+    text-transform: uppercase;
+    .welcome-slider-io-pointer {
+      display: flex;
+      justify-content: space-between;
+      .welcome-slider-io-point {
+        height: 100%;
+        background-color: white;
+        transition: background-color ease 0.33s;
+      }
+      .welcome-slider-io-point:hover {
+        background-color: rgba(157, 134, 101, 1);
+      }
+    }
+    .welcome-slider-io-left-arrow {
+      img {
+        transform: scaleX(-1);
+      }
+    }
   }
 }
