feat: js added, sth refactored

--- a/style/common.css
+++ b/style/common.css
@@ -58,6 +58,39 @@ main h2 {
   font-family: Forum, serif;
 }
 
+.main-gap {
+  width: 1920px;
+  height: 400px;
+  position: relative;
+  overflow: hidden;
+}
+.main-gap .gap-container {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.main-gap .gap-container .gap-view {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+div.hall {
+  position: relative;
+  overflow: hidden;
+}
+div.hall img {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 #video iframe {
   width: 100%;
   height: 100%;
@@ -65,15 +98,6 @@ main h2 {
 #video .scroller img {
   width: 100%;
   height: 100%;
-}
-
-#tickets input[type=number] {
-  -moz-appearance: textfield;
-}
-#tickets input[type=number]::-webkit-outer-spin-button,
-#tickets input[type=number]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
 }
 
 #welcome, #explore, #gallery, footer {
