--- a/style/tickets.css
+++ b/style/tickets.css
@@ -90,6 +90,7 @@
     top: 58px;
   }
   #tickets .content .container .amount .senior {
+    margin-top: 5px;
     top: 159px;
   }
   #tickets .content .container .amount .ticket-pick {
@@ -105,6 +106,7 @@
     width: 150px;
     height: 50px;
     top: 41px;
+    right: 0;
   }
   #tickets .content .container .amount .ticket-pick .counter button, #tickets .content .container .amount .ticket-pick .counter input {
     border: none;
@@ -124,10 +126,12 @@
     font-size: 32px;
     font-weight: 400;
   }
-  #tickets .content .container #total {
-    width: 150px;
+  #tickets .content .container #total-prise {
+    width: 200px;
+    text-align: right;
     height: 33px;
     top: 300px;
+    right: 0;
     position: absolute;
   }
   #tickets .content .container #buy {
@@ -153,6 +157,14 @@
     background: rgb(157, 134, 101);
     color: black;
   }
+}
+#tickets input[type=number] {
+  -moz-appearance: textfield;
+}
+#tickets input[type=number]::-webkit-outer-spin-button,
+#tickets input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /*# sourceMappingURL=tickets.css.map */
