--- a/style/explore.css
+++ b/style/explore.css
@@ -6,6 +6,7 @@
     align-items: center;
   }
   #explore .content {
+    border: 2px solid red;
     height: 715px;
     display: grid;
     grid-template-columns: 660px 720px;
@@ -33,14 +34,15 @@
   }
   #explore .content .meninas-content {
     position: relative;
-    margin-top: 15px;
+    top: 15px;
+    border: 2px solid red;
   }
   #explore .content .meninas-content .meninas-cleaned-container {
     position: absolute;
     left: 0;
     top: 0;
-    height: 700px;
-    width: 720px;
+    height: 100%;
+    width: 100%;
     z-index: 2;
   }
   #explore .content .meninas-content .meninas-cleaned-container .meninas-cleaned {
@@ -51,8 +53,8 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 700px;
-    width: 440px;
+    height: 100%;
+    width: 100%;
     z-index: 2;
   }
   #explore .content .meninas-content .meninas-yellow-container .meninas-yellow {
@@ -62,6 +64,19 @@
     left: 0;
     height: 100%;
     z-index: 1;
+  }
+  #explore .content .meninas-content .meninas-branch-container {
+    position: absolute;
+    width: 39px;
+    height: 100%;
+    top: 15px;
+    left: 1141px;
+    z-index: 5;
+  }
+  #explore .content .meninas-content .meninas-branch-container .meninas-branch {
+    position: relative;
+    height: 100%;
+    z-index: 50;
   }
 }
 #explore .content .second .yellow {
