--- a/style/welcome.css
+++ b/style/welcome.css
@@ -61,6 +61,7 @@
     line-height: 40px;
   }
   #welcome .content .welcome-slider-io .welcome-slider-io-metadata {
+    transform: translateX(5px);
     width: 76px;
     height: 40px;
     color: white;
